# governments-of-canada-knowledge-graph

./: README.md  pyproject.toml
docs/milestone_1/: commons-members-execution-plan.md  gckg-sources.mmd  gckg.mmd
docs/milestone_2/: validate-execution-plan.md
docs/milestone_3/: transform-execution-plan.md
domain_model/: schema.yaml
domain_model/domains/: elections_canada.yaml  house_of_commons.yaml
domain_model/foundation/: prefixes.yaml  types.yaml
ingest/: __init__.py  cli.py  context.py  errors.py  runner.py  schema.py  utils.py
ingest/adapters/: __init__.py  base.py  registry.py
ingest/adapters/commons/: __init__.py  members.py  petitions.py  votes.py  xml_utils.py
ingest/adapters/open_canada/: __init__.py  contribution.py  expenditure.py
ingest/adapters/udc/: districts.py
ingest/config/: __init__.py  sources.yaml
ingest/fetch/: __init__.py  cache.py  client.py
ingest/tests/: __init__.py
ingest/tests/adapters/: __init__.py  test_commons_members.py
ingest/tests/fixtures/normalized/: commons_members_no_id_sample.json  commons_members_normalized_sample.json  (+1 more)
source/: commons_members.schema.yaml
transforms/: __main__.py  cli.py  commons_members_to_gckg.transform.yaml  context.py  engine.py  errors.py  runner.py  utils.py
transforms/config/: __init__.py  maps.yaml
transforms/materializers/: base.py  commons_members.py
validate/: __init__.py  __main__.py  cli.py  context.py  engine.py  errors.py  runner.py
validate/config/: __init__.py  schemas.yaml
validate/tests/: conftest.py  test_engine.py  test_runner.py
(+1 files in other folders)
