[project]
name = "gckg-ingest"
version = "0.1.0"
description = "GCKG Stage 1 ingest adapters"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
validate = ["linkml>=1.9.0"]

[project.scripts]
ingest = "ingest.cli:main"
validate = "validate.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingest*", "validate*"]

[tool.pytest.ini_options]
testpaths = ["ingest/tests", "validate/tests"]
